# mcp-google-authenticator

./: README.md  README_EN.md  pyproject.toml
src/mcp_google_authenticator/: __main__.py  google_authenticator_plugin.py  main.py
